force-app/main/default/objects/Knowledge__kav/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <description>Specifies the type of the knowledge article to define its structure &amp; purpose.</description>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>