force-app/main/default/objects/Knowledge__kav/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Captures feedback or notes added by users regarding the knowledge article for review or improvement.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>