force-app/main/default/objects/Knowledge__kav/fields/Doc_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Doc_Control_Number__c</fullName>
    <description>Stores the unique document control number used to track &amp; manage the knowledge article.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Doc Control Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>