force-app/main/default/objects/Knowledge__kav/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <description>Contains the main content or details of the knowledge article that provide information to the reader.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>