force-app/main/default/objects/Knowledge__kav/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>Tracks the version number of the article to identify updates &amp; revisions.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revision</label>
    <length>3</length>
    <type>Text</type>
</CustomField>