force-app/main/default/objects/Knowledge__kav/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>Defines the key terms to the article&apos;s content.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>