force-app/main/default/objects/Knowledge__kav/listViews/All_Articles.listView-meta.xml
<ListView>
    <fullName>All_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>Article_Type__c</columns>
    <columns>LANGUAGE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>VERSION_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <label>All Articles</label>
</ListView>